--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p id="precio">Precio:</p>
                 <p id="calificacion">Calificación:</p>
                 <p id="cantidad">Cantidad:</p>
-               <button class="btn btn-dark">Comprar</button><button class="btn btn-info btn-sm">+</button><button class="btn btn-danger btn-sm">-</button>
+               <button class="btn btn-info btn-sm">Agregar</button><button class="btn btn-danger btn-sm">Quitar</button>
            </div>
          </div>
        </div>
