--- a/public/carrito.html
+++ b/public/carrito.html
@@ -17,6 +17,7 @@
             <tr>
               <th scope="col">#</th>
               <th scope="col">Item</th>
+              <th scope="col">Precio</th>
               <th scope="col">Cantidad</th>
               <th scope="col">Acción</th>
               <th scope="col">Total</th>
@@ -40,6 +41,7 @@
 
     <template id="template-footer">
         <th scope="row" colspan="2">Total productos</th>
+        <td></td>
         <td>10</td>
         <td>
             <button class="btn btn-danger btn-sm" id="vaciar-carrito">
@@ -54,6 +56,7 @@
         <th scope="row">id</th>
         <td>Café</td>
         <td>1</td>
+        <td>$500</td>
         <td>
             <button class="btn btn-info btn-sm">
                 +
