--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Productos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+
 <body>
     <a href="public/carrito.html" id="irDetalleCarrito">Detalle del Carrito</a>
+
     <div class="container">
         <h1>Productos</h1>
         <hr>
@@ -17,7 +19,29 @@
 
 
 
+    
     <template id="template-card">
+      <div class="card mb-3" style="max-width: 1200px;">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+           <img src="" class="card-img-top" alt="...">
+         </div>
+          <div class="col-md-8">
+           <div class="card-body">
+             <h3 id="titulo">Titulo</h3>
+               <h5 id="descripcion">Descripción:</h5>
+                <p id="precio">Precio:</p>
+                <p id="calificacion">Calificación:</p>
+                <p id="cantidad">Cantidad:</p>
+               <button class="btn btn-info btn-sm">Agregar</button><button class="btn btn-danger btn-sm">Quitar</button>
+           </div>
+         </div>
+       </div>
+     </div>
+    </template>
+    
+    <!-- TEMPLATE ORIGINAL TUTORIAL
+      <template id="template-card">
         <div class="col-12 mb-2 col-md-4">
           <div class="card">
               <img src="" alt="" class="card-img-top">
@@ -28,7 +52,7 @@
             </div>
           </div>
         </div>
-      </template>
+      </template>-->
 
     <script src="js/jsIndex.js"></script>
 </body>
