--- a/public/carrito.html
+++ b/public/carrito.html
@@ -17,6 +17,7 @@
             <tr>
               <th scope="col">#</th>
               <th scope="col">Item</th>
+              <th scope="col">Precio</th>
               <th scope="col">Cantidad</th>
               <th scope="col">Acción</th>
               <th scope="col">Total</th>
@@ -29,24 +30,52 @@
             </tr>
           </tfoot>
         </table>
-        <div class="row" id="items"></div>
     </div>
+    <div class="container" id="footer-envio"></div>
 
 
-
-
-
-
+<template id="template-envio">
+    <h1>Detalle del envío</h1>
+    <hr>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Nombre</th>
+          <th scope="col">Apellido</th>
+          <th scope="col">Dirección</th>
+          <th scope="col">Teléfono</th>
+          <th scope="col">Costo Envio</th>
+        </tr>
+      </thead>
+      <tbody>
+        <td id="nombre">Nombre</th>
+        <td id="apellido">Apellido</th>
+        <td id="direccion">Dirección</th>
+        <td id="telefono">Teléfono</th>
+        <td >$ <span id="costo">600</span></th>
+      </tbody>
+      <tfoot>
+        <tr>
+            <th>Costo total:</td>
+            <th >$ <span id="total-costo">600</span></td>
+            <td></td>
+            <td><button class="btn btn-danger btn-sm"> Modificar datos </button></td>
+            <td><button class="btn btn-info btn-sm"> Confirmar compra</button></td>
+        </tr>
+      </tfoot>
+    </table>
+</template>
 
     <template id="template-footer">
         <th scope="row" colspan="2">Total productos</th>
+        <td></td>
         <td>10</td>
         <td>
             <button class="btn btn-danger btn-sm" id="vaciar-carrito">
                 vaciar todo
             </button>
         </td>
-        <td class="font-weight-bold">$ <span>5000</span></td>
+        <td class="font-weight-bold">$ <span id="total-compra">5000</span></td>
     </template>
     
     <template id="template-carrito">
@@ -54,6 +83,7 @@
         <th scope="row">id</th>
         <td>Café</td>
         <td>1</td>
+        <td>$500</td>
         <td>
             <button class="btn btn-info btn-sm">
                 +
