--- a/index.html
+++ b/index.html
@@ -1,78 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Productos</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color: #7fffd4;" alt="1200px">
-  <div class="container-fluid">
+  <nav
+    class="navbar navbar-expand-lg navbar navbar-light"
+    style="background-color: #7fffd4"
+    alt="1200px"
+  >
+    <div class="container-fluid">
+      <img src="../img/LogotB.png" width="80px" />
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../login.html"
+              >Cuenta</a
+            >
+          </li>
 
-    <img src="../img/LogotB.png" width="80px">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="../login.html">Cuenta</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="../index.html">Seguir comprando</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Nosotros</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/public/carrito.html"><img img src="../img/carrito.png" width="40px"><b id="totalCompraNav">$0</b></a>
-        </li>
-
-
-      </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Buscar</button>
-      </form>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../index.html"
+              >Seguir comprando</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="/public/carrito.html"
+              ><img img src="../img/carrito.png" width="40px" /><b
+                id="totalCompraNav"
+                >$0</b
+              ></a
+            >
+          </li>
+        </ul>
+        <form class="d-flex">
+          <input
+            class="form-control me-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-success" type="submit">Buscar</button>
+        </form>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
-<body>
-
+  <body>
     <div class="container">
-        <h1>Productos</h1>
-        <hr>
-        <div class="row" id="cards"></div>
+      <h1>Productos</h1>
+      <hr />
+      <div class="row" id="cards"></div>
     </div>
 
-
-
-    
     <template id="template-card">
-      <div class="card mb-3" style="max-width: 1200px;">
+      <div class="card mb-3" style="max-width: 1200px">
         <div class="row no-gutters">
           <div class="col-md-4">
-           <img src="" class="card-img-top" alt="...">
-         </div>
+            <img src="" class="card-img-top" alt="..." />
+          </div>
           <div class="col-md-8">
-           <div class="card-body">
-             <h3 id="titulo">Titulo</h3>
-               <h5 id="descripcion">Descripción:</h5>
-                <p id="precio">Precio:</p>
-                <p id="calificacion">Calificación:</p>
-                <p id="cantidad">Cantidad:</p>
-               <button class="btn btn-info btn-sm">Agregar</button><button class="btn btn-danger btn-sm">Quitar</button>
-           </div>
-         </div>
-       </div>
-     </div>
+            <div class="card-body">
+              <h3 id="titulo">Titulo</h3>
+              <h5 id="descripcion">Descripción:</h5>
+              <p id="precio">Precio:</p>
+              <p id="calificacion">Calificación:</p>
+              <p id="cantidad">Cantidad:</p>
+              <button class="btn btn-info btn-sm">Agregar</button
+              ><button class="btn btn-danger btn-sm">Quitar</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </template>
-    
+
     <!-- TEMPLATE ORIGINAL TUTORIAL
       <template id="template-card">
         <div class="col-12 mb-2 col-md-4">
@@ -88,5 +115,5 @@
       </template>-->
 
     <script src="js/jsIndex.js"></script>
-</body>
+  </body>
 </html>
