--- a/public/carrito.html
+++ b/public/carrito.html
@@ -54,7 +54,7 @@
               <th scope="col">Precio</th>
               <th scope="col">Cantidad</th>
               <th scope="col">Acción</th>
-              <th scope="col">Total</th>
+              <th scope="col">Total productos</th>
             </tr>
           </thead>
           <tbody id="items"></tbody>
@@ -68,13 +68,13 @@
     <div class="container" id="footer-envio"></div>
     <br>
     <div class="container">
-      <h3>Seleccione el tipo de envio:</h3>
+      <h3>Seleccione el tipo de envio: <button class="btn btn-info btn-sm"> Confirmar compra</button></h3>
       <div class="form-check">
         <input class="form-check-input" type="radio" name="tipoEnvio" id="tipoEnvioLocal" checked>
         <label class="form-check-label" for="flexRadioDefault2">
           Retiro por el local
         </label>
-      </div>
+            </div>
       <div class="form-check">
         <input class="form-check-input" type="radio" name="tipoEnvio" id="tipoEnvioDomicilio">
         <label class="form-check-label" for="flexRadioDefault1">
@@ -104,6 +104,8 @@
         </label>
       </div>
     </div>
+    
+    
 
 
 <template id="template-envio">
@@ -128,11 +130,11 @@
       </tbody>
       <tfoot>
         <tr>
-            <th>Costo total:</td>
-            <th >$ <span id="total-costo">600</span></td>
             <td></td>
-            <td><button class="btn btn-danger btn-sm"> Modificar datos </button></td>
-            <td><button class="btn btn-info btn-sm"> Confirmar compra</button></td>
+            <th ></th>
+            <td><button class="btn btn-danger btn-sm"> Modificar datos de envio</button></td>
+            <th>Costo total:</th>
+            <th>$ <span id="total-costo">600</span></th>
         </tr>
       </tfoot>
     </table>
