--- a/public/datosUser.html
+++ b/public/datosUser.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Productos</title>
-    <link rel="icon" href="/img/iconoLogo.ico" />
+    <title>Datos del usuario</title>
+    <link rel="icon" href="../img/iconoLogo.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -84,46 +84,9 @@
     </nav>
 
     <div class="container">
-      <h1>Productos</h1>
-      <hr />
-      <div class="row" id="cards"></div>
+      <h1>Datos del usuario</h1>
     </div>
 
-    <template id="template-card">
-      <div class="card mb-3" style="max-width: 1200px">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <img src="" class="card-img-top" alt="..." />
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h3 id="titulo">Titulo</h3>
-              <h5 id="descripcion">Descripción:</h5>
-              <p id="precio">Precio:</p>
-              <p id="calificacion">Calificación:</p>
-              <p id="cantidad">Cantidad:</p>
-              <button class="btn btn-info btn-sm">Agregar</button
-              ><button class="btn btn-danger btn-sm">Quitar</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </template>
-
-    <!-- TEMPLATE ORIGINAL TUTORIAL
-      <template id="template-card">
-        <div class="col-12 mb-2 col-md-4">
-          <div class="card">
-              <img src="" alt="" class="card-img-top">
-            <div class="card-body">
-              <h5>Titulo</h5>
-              <p>precio</p>
-              <button class="btn btn-dark">Comprar</button>
-            </div>
-          </div>
-        </div>
-      </template>-->
-
-    <script src="js/jsIndex.js"></script>
+    <script src="../js/jsDatosUser.js"></script>
   </body>
 </html>
