Agregado footer en páginas

--- a/index.html
+++ b/index.html
@@ -89,6 +89,24 @@
       <div class="row" id="cards"></div>
     </div>
 
+    <footer class="pie-pagina">
+      <div class="box">
+        <h2>Siguenos</h2>
+        <div class="redes-sociales">
+          <a
+            href="https://www.facebook.com/micaela.navarro.35513800"
+            class="fa fa-facebook"
+          ></a>
+          <a href="https://wa.me/542612732348" class="fa fa-whatsapp"></a>
+        </div>
+      </div>
+      <div class="grupo-2">
+        <small
+          >&copy; 2022 <b> GymSales</b>- Todos los derechos reservados
+        </small>
+      </div>
+    </footer>
+
     <template id="template-card">
       <div class="card mb-3" style="max-width: 1200px">
         <div class="row no-gutters">
@@ -109,20 +127,6 @@
         </div>
       </div>
     </template>
-
-    <!-- TEMPLATE ORIGINAL TUTORIAL
-      <template id="template-card">
-        <div class="col-12 mb-2 col-md-4">
-          <div class="card">
-              <img src="" alt="" class="card-img-top">
-            <div class="card-body">
-              <h5>Titulo</h5>
-              <p>precio</p>
-              <button class="btn btn-dark">Comprar</button>
-            </div>
-          </div>
-        </div>
-      </template>-->
 
     <script src="js/jsIndex.js"></script>
   </body>
