--- a/public/datosUser.html
+++ b/public/datosUser.html
@@ -87,6 +87,24 @@
       <h1>Datos del usuario</h1>
     </div>
 
+    <footer class="pie-pagina">
+      <div class="box">
+        <h2>Siguenos</h2>
+        <div class="redes-sociales">
+          <a
+            href="https://www.facebook.com/micaela.navarro.35513800"
+            class="fa fa-facebook"
+          ></a>
+          <a href="https://wa.me/542612732348" class="fa fa-whatsapp"></a>
+        </div>
+      </div>
+      <div class="grupo-2">
+        <small
+          >&copy; 2022 <b> GymSales</b>- Todos los derechos reservados
+        </small>
+      </div>
+    </footer>
+
     <script src="../js/jsDatosUser.js"></script>
   </body>
 </html>
