--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Productos</title>
     <link rel="icon" href="/img/iconoLogo.ico" />
+    <!--cdn bootstrap-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -83,6 +84,10 @@
       </div>
     </nav>
 
+    <button class="btn btn-info btn-sm" id="pruebaCarrito">
+      prueba obtener carrito
+    </button>
+
     <div class="container">
       <h1>Productos</h1>
       <hr />
@@ -120,13 +125,20 @@
               <p id="precio">Precio:</p>
               <p id="calificacion">Calificación:</p>
               <p id="cantidad">Cantidad:</p>
-              <button class="btn btn-info btn-sm">Agregar</button
-              ><button class="btn btn-danger btn-sm">Quitar</button>
+              <button class="btn btn-info btn-sm">Agregar</button>
+              <button class="btn btn-danger btn-sm">Quitar</button>
             </div>
           </div>
         </div>
       </div>
     </template>
+
+    <!--cdn jquery-->
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
 
     <script src="js/jsIndex.js"></script>
   </body>
