--- a/public/carrito.html
+++ b/public/carrito.html
@@ -1,49 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Detalle del carrito</title>
-  <link rel="icon" href="../img/iconoLogo.ico" />
+  <link rel="icon" href="/img/iconoLogo.ico" />
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
   <!-- ************************************ INICIO NAV ************************************-->
-  <nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color: #7fffd4;" alt="1200px">
-    <div class="container-fluid">
 
-      <img src="../img/LogotB.png" width="80px">
+  <nav class="navbar navbar-expand-lg navbar navbar-light sticky-top" style="background-color: #7fffd4" alt="1200px">
+    <div class="container-fluid">
+      <a href="../index.html"><img src="../img/Logo.png" width="60px" /></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+      <ul class="nav-item">
+        <a class="nav-link active" aria-current="page" href="/public/carrito.html"><img img src="../img/carrito.png"
+            width="30px" /><b id="totalCompraNav">$0</b></a>
+      </ul>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../login.html">Cuenta</a>
+            <a class="nav-link active" aria-current="page" href="../public/login.html">Inicia Sesion</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../index.html">Seguir comprando</a>
+            <a class="nav-link active" aria-current="page" href="../public/misCompras.html">Mis compras</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Nosotros</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/public/carrito.html"><img img src="../img/carrito.png"
-                width="40px"><b id="totalCompraNav">$0</b></a>
-          </li>
-
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Buscar</button>
-        </form>
       </div>
+      <form class="d-flex">
+        <ul class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Categorías
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#">Suplementos</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#">Ropa y accesorios</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#">Fitness y Musculación</a></li>
+          </ul>
+        </ul>
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+        <button class="btn btn-outline-success" type="submit">
+          Buscar
+        </button>
+      </form>
     </div>
   </nav>
   <!-- ************************************ FIN NAV ************************************-->
@@ -324,8 +345,12 @@
 
   <!-- ************************************ FIN TEMPLATE CARRITO ************************************-->
 
-  <!-- ************************************ INICIO TEMPLATES Y SCRIPTS ************************************-->
+  <!-- ************************************ INICIO SCRIPTS ************************************-->
 
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
   <!--cdn jquery-->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
