Agregado generación de cart en BD y update de cart al confirmar compra

--- a/public/confirmaCompra.html
+++ b/public/confirmaCompra.html
@@ -81,6 +81,10 @@
         <a href="https://www.facebook.com/micaela.navarro.35513800" class="fa fa-facebook"></a>
         <a href="https://wa.me/542612732348" class="fa fa-whatsapp"></a>
       </div>
+      <div id="pruabaProductos">
+        <!--ELIMINAR LUEGO DE LA PRESENTACIÓN DEL VIERNES-->
+
+      </div>
     </div>
     <div class="grupo-2">
       <small>&copy; 2022 <b> GymSales</b>- Todos los derechos reservados
