--- a/public/carrito.html
+++ b/public/carrito.html
@@ -79,10 +79,10 @@
         <tr>
           <th scope="col">#</th>
           <th scope="col">Item</th>
-          <th scope="col">Precio</th>
-          <th scope="col">Cantidad</th>
+          <th scope="col">$</th>
+          <th scope="col">Cant.</th>
           <th scope="col">Acción</th>
-          <th scope="col">Total productos</th>
+          <th scope="col">Total</th>
         </tr>
       </thead>
       <tbody id="items"></tbody>
