--- a/public/carrito.html
+++ b/public/carrito.html
@@ -37,8 +37,20 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="../public/misCompras.html">Mis compras</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Nosotros</a>
+          <li class="nav-item" id="adminSitio">
+            <ul class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Administrar Sitio
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="../public/ABMUsuarios.html">ABM Usuarios</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="../public/ABMProductos.html">ABM Productos</a></li>
+              </ul>
+            </ul>
           </li>
         </ul>
         <ul class="nav-item dropdown">
@@ -345,9 +357,27 @@
   </template>
 
   <!-- ************************************ FIN TEMPLATE CARRITO ************************************-->
+  <!-- ************************************ INICIO TEMPLATE ADMIN ************************************-->
+  <template id="template-admin">
+    <ul class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">
+        Administrar Sitio
+      </a>
+      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="../public/ABMUsuarios.html">ABM Usuarios</a></li>
+        <li>
+          <hr class="dropdown-divider">
+        </li>
+        <li><a class="dropdown-item" href="../public/ABMProductos.html">ABM Productos</a></li>
+      </ul>
+    </ul>
+  </template>
+  <!-- ************************************ FIN TEMPLATE ADMIN ************************************-->
 
   <!-- ************************************ INICIO SCRIPTS ************************************-->
-
+  <!-- CDN sweet alert -->
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
