--- a/public/misCompras.html
+++ b/public/misCompras.html
@@ -127,7 +127,7 @@
                         <p id="precio">Precio:</p>
                         <p id="calificacion">Calificación:</p>
                         <p id="cantidad">Cantidad:</p>
-                        <p id="tuCalificacion"><b>Quieres calificar éste producto?</b><br>
+                        <p><b id="tuCalificacion">Quieres calificar éste producto?</b><br>
                             <span class="fa fa-star 1" onclick="calificar(this)" style="cursor: pointer;" id="1"></span>
                             <span class="fa fa-star 2" onclick="calificar(this)" style="cursor: pointer;" id="2"></span>
                             <span class="fa fa-star 3" onclick="calificar(this)" style="cursor: pointer;" id="3"></span>
