--- a/public/ABMProductos.html
+++ b/public/ABMProductos.html
@@ -39,19 +39,7 @@
                         <a class="nav-link active" aria-current="page" href="../public/misCompras.html">Mis compras</a>
                     </li>
                     <li class="nav-item" id="adminSitio">
-                        <ul class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Administrar Sitio
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="../public/ABMUsuarios.html">ABM Usuarios</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="../public/ABMProductos.html">ABM Productos</a></li>
-                            </ul>
-                        </ul>
+
                     </li>
                 </ul>
                 <ul class="nav-item dropdown">
@@ -59,29 +47,23 @@
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Categorías
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Suplementos</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Ropa y accesorios</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Fitness y Musculación</a></li>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown" id="dropCategoria">
+
                     </ul>
                 </ul>
             </div>
-            <form class="d-flex">
 
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                <button class="btn btn-outline-success" type="submit">
-                    Buscar
-                </button>
-            </form>
+
+            <input class="form-control me-2" id="buscador" type="text" placeholder="Search" aria-label="Search" />
+            <button class="btn btn-outline-success" id="btnBuscador">
+                Buscar
+            </button>
+
         </div>
     </nav>
     <!-- ************************************ FIN NAV ************************************-->
+
+    <!-- ************************************ INICIO CRUD ************************************-->
     <div class="row justify-content-center">
         <div id="producto-detalle" class="text-center mt-5 p-2 col-md-4">
 
@@ -101,7 +83,6 @@
                             <th>Cód. Barras</th>
                             <th>Categoría</th>
                             <th>Foto</th>
-                            <th></th>
                             <th></th>
                             <th></th>
                         </tr>
@@ -128,7 +109,7 @@
                             placeholder="Código de Barras">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control font-italic" id="categoria" placeholder="Categoría">
+                        <select class="form-control font-italic" id="catSelect"></select>
                     </div>
                     <div class="form-group">
                         <input type="text" class="form-control font-italic" id="foto" placeholder="Foto">
@@ -140,7 +121,7 @@
             </div>
         </div>
     </div>
-
+    <!-- ************************************ FIN CRUD ************************************-->
 
     <!-- ************************************ INICIO FOOTER ************************************-->
     <footer class="pie-pagina">
