Terminado CRUD categorias, productos y usuarios

--- a/index.html
+++ b/index.html
@@ -42,13 +42,9 @@
           </li>
         </ul>
         <ul class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            Categorías
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown" id="dropCategoria">
-
-          </ul>
+          <div class="form-group">
+            <select class="selectpicker" id="dropCategoria"></select>
+          </div>
         </ul>
       </div>
 
@@ -126,6 +122,10 @@
           <hr class="dropdown-divider">
         </li>
         <li><a class="dropdown-item" href="../public/ABMProductos.html">ABM Productos</a></li>
+        <li>
+          <hr class="dropdown-divider">
+        </li>
+        <li><a class="dropdown-item" href="../public/ABMCategorias.html">ABM Categorias</a></li>
       </ul>
     </ul>
   </template>
