Terminado CRUD categorias, usuarios y productos

--- a/public/misCompras.html
+++ b/public/misCompras.html
@@ -46,23 +46,7 @@
 
                     </li>
                 </ul>
-                <ul class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Categorías
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown" id="dropCategoria">
-
-                    </ul>
-                </ul>
             </div>
-
-
-            <input class="form-control me-2" id="buscador" type="text" placeholder="Search" aria-label="Search" />
-            <button class="btn btn-outline-success" id="btnBuscador">
-                Buscar
-            </button>
-
         </div>
     </nav>
     <!-- ************************************ FIN NAV ************************************-->
@@ -135,6 +119,10 @@
                     <hr class="dropdown-divider">
                 </li>
                 <li><a class="dropdown-item" href="../public/ABMProductos.html">ABM Productos</a></li>
+                <li>
+                    <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="../public/ABMCategorias.html">ABM Categorias</a></li>
             </ul>
         </ul>
     </template>
