--- a/public/ABMCategorias.html
+++ b/public/ABMCategorias.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>ABM Usuarios</title>
+    <title>ABM categorias</title>
     <link rel="icon" href="/img/iconoLogo.ico" />
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -61,12 +61,6 @@
                         <tr>
                             <th>ID</th>
                             <th>Nombre</th>
-                            <th>Apellido</th>
-                            <th>Direccion</th>
-                            <th>Telefono</th>
-                            <th>Email</th>
-                            <th>Password</th>
-                            <th>Rol</th>
                             <th></th>
                             <th></th>
                         </tr>
@@ -79,35 +73,13 @@
                     <div class="form-group">
                         <input type="text" class="form-control font-italic" id="nombre" placeholder="Nombre">
                     </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control font-italic" id="apellido" placeholder="Apellido">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control font-italic" id="direccion" placeholder="Direccion">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control font-italic" id="telefono" placeholder="Telefono">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control font-italic" id="email" placeholder="Email">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control font-italic" id="password" placeholder="Password">
-                    </div>
-                    <div class="form-group">
-                        <select class="form-control font-italic" id="rolSelect">
-                            <option value="1">Admin</option>
-                            <option value="2">User</option>
-                        </select>
-                    </div>
                     <input type="hidden" id="id">
-                    <button id="agregar" class="btn btn-success btn-block">Agregar usuario</button>
-                    <button id="editar" class="btn btn-success btn-block" style="display:none">Editar usuario</button>
+                    <button id="agregar" class="btn btn-success btn-block">Agregar producto</button>
+                    <button id="editar" class="btn btn-success btn-block" style="display:none">Editar producto</button>
                 </div>
             </div>
         </div>
     </div>
-
     <!-- ************************************ FIN CRUD ************************************-->
 
     <!-- ************************************ INICIO FOOTER ************************************-->
@@ -160,7 +132,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
-    <script src="../js/jsABMUsuarios.js"></script>
+    <script src="../js/jsABMCategorias.js"></script>
 </body>
 
 </html>
